# dva-api/api/src/main/kotlin/hu/bme/mit/ftsrg/dva/api/resource/Evaluation.kt
@@ -1,0 +1,7 @@
+package hu.bme.mit.ftsrg.dva.api.resource
+
+import io.ktor.resources.*
+
+@Suppress("unused")
+@Resource("/evaluate")
+class Evaluation
